CUSTO-40: Updated tests to run on the updated test framework from earlier Magento versions, fixing and adjusting tests based on findings when run in 2.4.6 with some of the fixes relating to dropped Zend packages, fixing translation annotations

--- a/view/adminhtml/templates/status.phtml
+++ b/view/adminhtml/templates/status.phtml
@@ -12,10 +12,10 @@
 <table id="status-listing" class="admin__table-secondary">
     <thead>
         <tr>
-            <th><?= \__('Record type'); ?></th>
-            <th><?= \__('Status'); ?></th>
-            <th><?= \__('Export %'); ?></th>
-            <th><?= \__('Last Export'); ?></th>
+            <th><?= __('Record type'); ?></th>
+            <th><?= __('Status'); ?></th>
+            <th><?= __('Export %'); ?></th>
+            <th><?= __('Last Export'); ?></th>
         </tr>
     </thead>
     <tbody>
