--- a/view/frontend/layout/default.xml
+++ b/view/frontend/layout/default.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0"?>
 <page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <body>
-        <referenceContainer name="before.body.end">
+        <referenceContainer name="head.additional">
             <block name="custobar_statistics"
                    class="Custobar\CustoConnector\Block\Statistics"
                    template="custoconnector/statistics.phtml">
